Fix unreadable welcome screen in 6.2

--- a/assets/import.css
+++ b/assets/import.css
@@ -1,3 +1,6 @@
+.welcome-panel.import-redux {
+	background-color: transparent;
+}
 .import-status {
 	width: 100%;
 
